完成了首页的开发以及登录模块的相关修改

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -38,7 +38,7 @@ body {
 .layui-form-item {
     position: relative;
 }
-.layui-icon {
+.icon-position {
     position: absolute;
     left: 10px;
     top: 10px;
